[tool.poetry]
name = "gen-random-data"
version = "0.1.0"
description = ""
authors = ["ismaHenzel <ismaelhenzel33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "1.0.1"
azure-storage-blob = "12.20.0"
httpx = "0.27.0"
aiohttp = "3.9.5"

[tool.poetry.group.dev.dependencies]
argparse = "1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
